--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
 </div>
 
 <div>
-  <a href="./assets/mailscript.zip" download>Download Mail Script (For Mac Mail Only)</a>
+  <a href="./assets/mailscript.zip" download>Download Mail Script (Mac Mail Only)</a>
 </div>
 
 <div id="inputBlock">
