--- a/src/app/signature/signature.component.scss
+++ b/src/app/signature/signature.component.scss
@@ -8,6 +8,8 @@
 }
 
 #sigDisplay {
+    font-family: 'Futura PT', 'Lato', 'Helvetica', 'Tahoma', 'Times New Roman', sans-serif;
+    color: #77787b;
     border: 1px solid;
     width: 373px;
     padding: 5px 5px;
