--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div style="text-align: center;">
     <div class="flexGrid">
         <div class="flexCol">
-            <button routerLink="Mac"  class="osButton"><img id="apple" src="./assets/apple.png" alt="Apple Logo">MAC</button></div>
+            <button routerLink="/mac-steps"  class="osButton"><img id="apple" src="./assets/apple.png" alt="Apple Logo">MAC</button></div>
 
         <div style="padding: 5px 0;" class="flexCol"><span>OR</span></div>
 
