--- a/src/app/signature/signature.component.scss
+++ b/src/app/signature/signature.component.scss
@@ -5,6 +5,7 @@
     border: 1px solid;
     margin-top: 15px;
     font-family: 'Courier New', Courier, monospace;
+    opacity: .1;
 }
 
 #sigDisplay {
