--- a/src/app/mac/mac.component.scss
+++ b/src/app/mac/mac.component.scss
@@ -2,3 +2,13 @@
     margin: 0 0 25px 0;
     font-weight: 400;
 }
+
+#macBlock {
+    width: fit-content;
+    margin: 0 auto;
+    font-weight: 300;
+}
+
+.instr1 {
+    padding-left: 0;
+}
