going through changes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,7 +18,7 @@ p {
  p.name {
      color: #EE202E;
      font-size: 16px;
-     font-weight: bolder !important;
+     font-weight: 300 !important;
      text-transform: uppercase;
  }
  .contact span {
